@startuml design

left to right direction

class User{
    -id: Int
    -name: String
    -password: String
    -creation_date: String
}

class Customer_User{
    -address: String
    -phone: Int
    -credit_card_info: Int
    +place_order(): String
    +track_order(): String
}

class Product{
    -code: Int
    -description: String
    -availability: Boolean
    -price: Int
}

class Order{
    -number: Int
    -creation_date: String
    -items: Item []
    -status: String
}

class Item{
    -sequential_number: Int
    -quantity: Int
    -paid_price: Double 
}

class Administrator{
    +change_order_status()
    +update_products_catalog()
}

User <|-- Customer_User
User <|-- Administrator 
Customer_User "1" --> "1..N" Order : orders
Item "1" --> "1" Product : product
Order "1" *--> "0..N" Item : items 

@enduml